Convert existing test.bsh into a regression test
The existing test.bash script has been converted to a regression test
that:
  - Verifies that in default mode (GCOV) we calcualte the correct
    coverage for a simple c binary
  - Verifies that in lcov mode  we correctly parse the .info file for a
    simple c binary

Additional tests can be created by copying the "test-src/simple"
directory and:
  - Updating the source file & Makefile with the new test code
  - Updating the expected.json with the expected coverage.
    NOTE: If gcov and lcov provide different results, this can be
          configured in the config.sh by specifying separate
          expected.json files
  - [optional] Providing a config.sh file in the directory to configure
    optional flags. (See valid options listed at the top of
    test-utils/testDir.sh)
  - Adding the directory to test.bash

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ python:
     - "3.4"
     - "3.5"
 
+addons:
+  apt:
+    packages:
+      - lcov
+
 install:
     - python setup.py --quiet install
 
