--- a/test-src/out_of_tree/build_tree/Makefile
+++ b/test-src/out_of_tree/build_tree/Makefile
@@ -2,16 +2,16 @@ SOURCE_TREE=../source_tree
 INCLUDE_FLAGS=-I$(SOURCE_TREE)/llib
 
 lib.o: $(SOURCE_TREE)/llib/lib.cpp $(SOURCE_TREE)/llib/lib.h
-	g++ --coverage -c -o $@ $(SOURCE_TREE)/llib/lib.cpp
+	$(CXX) --coverage -c -o $@ $(SOURCE_TREE)/llib/lib.cpp
 
 lib.a: lib.o
 	ar cr $@ $+
 
 a: $(SOURCE_TREE)/A/a.cpp lib.a
-	g++ --coverage $(INCLUDE_FLAGS) -o a $+
+	$(CXX) --coverage $(INCLUDE_FLAGS) -o a $+
 
 b: $(SOURCE_TREE)/B/b.cpp lib.a
-	g++ --coverage $(INCLUDE_FLAGS) -o b $+
+	$(CXX) --coverage $(INCLUDE_FLAGS) -o b $+
 
 prepare_test: a b
 
