--- a/test-src/simple/Makefile
+++ b/test-src/simple/Makefile
@@ -1,5 +1,5 @@
 foo: foo.c
-	gcc --coverage -o foo foo.c
+	$(CXX) --coverage -o foo foo.c
 
 clean:
 	rm -f foo *.gcno *.gcda output *.gcov output.json
