--- a/test-src/template_includes/Makefile
+++ b/test-src/template_includes/Makefile
@@ -1,8 +1,8 @@
 A: A.cpp common_header.h
-	g++ --coverage -o A A.cpp
+	$(CXX) --coverage -o A A.cpp
 
 B: B.cpp common_header.h
-	g++ --coverage -o B B.cpp
+	$(CXX) --coverage -o B B.cpp
 
 clean:
 	rm -f B A *.gcno *.gcda output *.gcov output.json *.gch
