--- a/test-src/missing_files/Makefile
+++ b/test-src/missing_files/Makefile
@@ -1,7 +1,7 @@
 unused.o: unused.h unused.cpp
-	gcc --coverage -c -o unused.o unused.cpp
+	$(CXX) --coverage -c -o unused.o unused.cpp
 foo: foo.c unused.o
-	gcc --coverage -o foo foo.c
+	$(CXX) --coverage -o foo foo.c
 
 clean:
 	rm -f foo *.gcno *.gcda output *.gcov output.json unused.o
